# packet-journey

./: .stream-capture.txt  AGENTS.md  README.md
.cursor/rules/: git-commit-no-cursor-coauthor.mdc
.github/workflows/: ci.yml  pages.yml
dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: app.css  entry.js  index.html  journey.css  main.js  main.tsx  screen.js  sea.css  stream.js  styles.css
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: lib.rs
dashboard/src/app/: App.tsx
docs/: PACKET_HARBOR_PLAN.md
docs/journal/: 2026-05-12.md  2026-05-13.md  2026-05-20.md  2026-05-29.md
observation-core/: Cargo.toml
observation-core/src/: correlation.rs  events.rs  judgment.rs  lib.rs  mock_fhir.rs
scripts/: booth.sh  lima-netlab.sh  lima-sync.sh  mac-dev.sh  pi-deploy.sh
tools/: Cargo.toml
tools/action-node/: Cargo.toml
tools/action-node/src/: main.rs
tools/mock-sensor/: Cargo.toml
tools/mock-sensor/src/: main.rs
tools/observation-hub/: Cargo.toml
tools/observation-hub/src/: main.rs
tools/traffic-node/: Cargo.toml
tools/traffic-node/src/: main.rs
xdp-hello/: Cargo.toml  README.md
xdp-hello/xdp-hello/: Cargo.toml  build.rs
xdp-hello/xdp-hello-common/src/: lib.rs
xdp-hello/xdp-hello-ebpf/src/: main.rs
xdp-hello/xdp-hello/src/: main.rs
