[workspace]
resolver = "2"
members = ["action-node", "mock-sensor", "observation-hub", "traffic-node"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
observation-core = { path = "../observation-core" }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time", "io-std"] }
