[package]
name = "action-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ラズパイ物理ボタンから HTTP トラフィックと physical_action イベントを送る"

[features]
default = []
gpio = ["dep:rppal"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
rppal = { version = "0.22", optional = true }
